fixed issue where horizontal scrollbar would show up

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,13 +46,15 @@ h5 {
 }
 
 /* mobile devices */
-@media only screen and (max-width: 720px), (max-width: 1024px) {
-  .App {
-    width: 100vw;
-  }
-
+@media only screen and (max-width: 720px), (max-width: 1024px), (hover: none) {
   .img-container:nth-child(5n + 1) {
     grid-column: auto;
+  }
+}
+
+@media only screen and (hover: none) {
+  .App {
+    width: 100vw;
   }
 }
 
